lang/lc/tests/err_var_init.sys
system test()
{
	bool a = 5;
}
